# dicta

./: .gitignore  .tagpr  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  Package.swift  README.md  install.sh
.github/: dependabot.yml  tagpr-template.md
.github/workflows/: tagpr.yml  test.yml
Resources/: Info.plist  vo.entitlements
Sources/vo/: AudioSource.swift  DeviceSelection.swift  Devices.swift  Doctor.swift  Listen.swift  Locales.swift  Pipeline.swift  Renderer.swift  Responsibility.swift  SessionLog.swift  Vo.swift
Tests/voTests/: RebindBoxTests.swift  RenderModeTests.swift  RendererTests.swift  VoErrorTests.swift
adapters/apple-speech/: Package.resolved  Package.swift
adapters/apple-speech/Resources/: Info.plist
adapters/apple-speech/Sources/dicta/: AudioSource.swift  DeviceSelection.swift  Dicta.swift  Doctor.swift  Listen.swift  Pipeline.swift  Renderer.swift  Responsibility.swift  SessionLog.swift
adapters/apple-speech/Sources/vo/: AudioSource.swift  CoreAudio+Property.swift  Pipeline.swift  Renderer.swift  Vo.swift
adapters/apple-speech/Tests/dictaTests/: DictaErrorTests.swift  RebindBoxTests.swift  RenderModeTests.swift  RendererTests.swift
crates/dicta-asr/: Cargo.toml
crates/dicta-asr-doubao/: Cargo.toml
crates/dicta-asr-doubao/src/: lib.rs
crates/dicta-asr-native-adapter/: Cargo.toml
crates/dicta-asr-native-adapter/src/: lib.rs
crates/dicta-asr-openai-compatible/: Cargo.toml
crates/dicta-asr-openai-compatible/src/: lib.rs
crates/dicta-asr-qianwen/: Cargo.toml  build.rs
crates/dicta-asr-qianwen/src/: lib.rs  wsg_shim.c
crates/dicta-asr/src/: lib.rs
crates/dicta-audio/: Cargo.toml  build.rs
crates/dicta-audio/src/: lib.rs  macos_microphone_permission.m
crates/dicta-cli/: Cargo.toml
crates/dicta-cli/src/: main.rs
crates/dicta-core/: Cargo.toml
crates/dicta-tray/: Cargo.toml
crates/dicta-tray/assets/: panel.html  panel.js
crates/dicta-tray/src/: main.rs
crates/dicta-web/: Cargo.toml
crates/dicta-web/src/: audio.rs  provider.rs  storage.rs
crates/vo-asr/: Cargo.toml
crates/vo-asr-apple-legacy/: Cargo.toml
crates/vo-asr-apple-legacy/src/: lib.rs
crates/vo-asr-doubao/: Cargo.toml
crates/vo-asr-doubao/src/: lib.rs
crates/vo-asr-native-adapter/: Cargo.toml
crates/vo-asr-native-adapter/src/: lib.rs
crates/vo-asr-openai-compatible/: Cargo.toml
crates/vo-asr-openai-compatible/src/: lib.rs
crates/vo-asr/src/: lib.rs
crates/vo-audio/: Cargo.toml  build.rs
crates/vo-audio/src/: lib.rs  macos_microphone_permission.m
crates/vo-cli/: Cargo.toml
crates/vo-cli/src/: main.rs
crates/vo-core/: Cargo.toml
crates/vo-core/src/: lib.rs
crates/vo-tray/: Cargo.toml
crates/vo-tray/assets/: panel.css  panel.html  panel.js
crates/vo-tray/src/: main.rs  native_glass.rs
crates/vo-web/: Cargo.toml
crates/vo-web/src/: audio.rs  error.rs  json.rs  lib.rs  provider.rs  storage.rs
docs/: openai-compatible-provider.md  providers.md  web-direct.md  web-wasm.md
legacy/apple-swift-adapter/Resources/: Info.plist
legacy/apple-swift-adapter/Sources/vo/: Doctor.swift  Listen.swift  Pipeline.swift  Vo.swift
legacy/apple-swift-adapter/Tests/voTests/: RendererTests.swift
scripts/: build-apple-speech-adapter.sh  build-apple-swift-adapter.sh  build.sh  sync-version.sh  test-apple-speech-adapter.sh  test-apple-swift-adapter.sh  test.sh
web/direct/: dicta-transcriber.js  index.html  vo-transcriber.js
