[workspace]
members = [
    "crates/vo-asr",
    "crates/vo-asr-doubao",
    "crates/vo-asr-native-adapter",
    "crates/vo-asr-openai-compatible",
    "crates/vo-audio",
    "crates/vo-cli",
    "crates/vo-core",
    "crates/vo-tray",
    "crates/vo-web",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
rust-version = "1.91"
version = "0.10.5"

[workspace.dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
bytes = "1.10.1"
clap = { version = "4.5.40", features = ["derive", "env"] }
cpal = "0.16.0"
futures-util = "0.3.31"
hound = "3.5.1"
jiff = { version = "0.2.31", default-features = false, features = ["std", "serde", "tz-system"] }
md5 = "0.7.0"
opus = "0.3.1"
prost = "0.14.1"
reqwest = { version = "0.12.22", default-features = false, features = ["json", "multipart", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tao = "0.35.3"
thiserror = "2.0.12"
time = "=0.3.44"
toml = "0.9.9"
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread", "fs", "io-util", "process", "signal", "time"] }
tokio-tungstenite = { version = "0.29.0", features = ["rustls-tls-webpki-roots"] }
tray-icon = "0.24.1"
uuid = { version = "1.17.0", features = ["v4"] }
vo-asr = { path = "crates/vo-asr" }
vo-asr-doubao = { path = "crates/vo-asr-doubao" }
vo-asr-native-adapter = { path = "crates/vo-asr-native-adapter" }
vo-asr-openai-compatible = { path = "crates/vo-asr-openai-compatible" }
vo-audio = { path = "crates/vo-audio" }
vo-core = { path = "crates/vo-core" }
wry = { version = "0.55.1", features = ["transparent"] }
