[workspace]
members = [
    "crates/dicta-asr",
    "crates/dicta-asr-native-adapter",
    "crates/dicta-asr-openai-compatible",
    "crates/dicta-audio",
    "crates/dicta-core",
    "crates/dicta-cli",
    "crates/dicta-tray",
    "crates/dicta-web",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
rust-version = "1.91"
version = "0.10.7"

[workspace.dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
axum = { version = "0.8.7", features = ["multipart"] }
base64 = "0.22.1"
bytes = "1.10.1"
clap = { version = "4.5.40", features = ["derive", "env"] }
cpal = "0.16.0"
flate2 = "1.1.5"
hound = "3.5.1"
jiff = { version = "0.2.31", default-features = false, features = ["std", "serde", "tz-system"] }
reqwest = { version = "0.12.22", default-features = false, features = ["json", "multipart", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
tao = "0.35.3"
tar = "0.4.44"
thiserror = "2.0.12"
time = "=0.3.44"
toml = "0.9.9"
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread", "fs", "io-util", "process", "signal", "time"] }
tower-http = { version = "0.6.11", features = ["cors"] }
tray-icon = "0.24.1"
dicta-asr = { path = "crates/dicta-asr" }
dicta-asr-native-adapter = { path = "crates/dicta-asr-native-adapter" }
dicta-asr-openai-compatible = { path = "crates/dicta-asr-openai-compatible" }
dicta-audio = { path = "crates/dicta-audio" }
dicta-core = { path = "crates/dicta-core" }
wry = { version = "0.55.1", features = ["transparent"] }
