[package]
name = "dicta-asr-native-adapter"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
async-trait.workspace = true
serde_json.workspace = true
tokio.workspace = true
dicta-asr.workspace = true
dicta-core.workspace = true
