[package]
name = "dicta-asr-qianwen"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
async-trait.workspace = true
libloading.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
dicta-asr.workspace = true
dicta-core.workspace = true
