[package]
name = "dicta-cli"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[[bin]]
name = "dicta"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
base64.workspace = true
clap.workspace = true
flate2.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tar.workspace = true
toml.workspace = true
tokio.workspace = true
tower-http.workspace = true
dicta-asr.workspace = true
dicta-asr-native-adapter.workspace = true
dicta-asr-openai-compatible.workspace = true
dicta-audio.workspace = true
dicta-core.workspace = true
