[package]
name = "dicta-web"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3.103"
serde.workspace = true
serde_json.workspace = true
dicta-core.workspace = true
wasm-bindgen = "0.2.126"
wasm-bindgen-futures = "0.4.76"
web-sys = { version = "0.3.103", features = [
    "Blob",
    "BlobEvent",
    "File",
    "FilePropertyBag",
    "FormData",
    "Headers",
    "MediaDevices",
    "MediaRecorder",
    "MediaRecorderOptions",
    "MediaStream",
    "MediaStreamConstraints",
    "MediaStreamTrack",
    "Navigator",
    "Request",
    "RequestInit",
    "Response",
    "Storage",
    "Window",
] }
