[package]
name = "vo-asr-doubao"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
async-trait.workspace = true
futures-util.workspace = true
hound.workspace = true
md5.workspace = true
opus.workspace = true
prost.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
uuid.workspace = true
vo-asr.workspace = true
vo-audio.workspace = true
vo-core.workspace = true
