[package]
name = "vo-asr-openai-compatible"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
async-trait.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
vo-asr.workspace = true
vo-core.workspace = true
