[package]
name = "vo-cli"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[[bin]]
name = "vo"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tokio.workspace = true
vo-asr.workspace = true
vo-asr-doubao.workspace = true
vo-asr-native-adapter.workspace = true
vo-asr-openai-compatible.workspace = true
vo-audio.workspace = true
vo-core.workspace = true
